# carousel-creator

./: .gitignore  AGENTS.md  package-lock.json  package.json
.aios-core/: constitution.md  core-config.yaml  railway-config.json  railway-integration-guide.md
.claude/: CLAUDE.md  (+1 more)
pcb-autoplacer/: .gitignore  pyproject.toml
pcb-autoplacer/.claude/agent-memory/dev-worker/: MEMORY.md
pcb-autoplacer/data/: jlcpcb_rules.yaml
pcb-autoplacer/docs/: workflow-pcb-labels-routes.md
pcb-autoplacer/docs/sessions/2026-02/: ground-plane-implementation.md
pcb-autoplacer/scripts/: generate_consul_schematic.py  import_ses_routes.py  inject_logo.py  kicad_bridge.py  photo_to_pcb.py  place_auto.py  place_lg_manual.py  run_pipeline.py  sch_to_pcb.py  sketch_to_pcb.py
pcb-autoplacer/src/pcb_autoplacer/: __init__.py  cli.py  config.py  models.py
pcb-autoplacer/src/pcb_autoplacer/ai/: circuit_analyzer.py  claude_cli.py  prompts.py  schemas.py
pcb-autoplacer/src/pcb_autoplacer/export/: kicad_cli.py
pcb-autoplacer/src/pcb_autoplacer/generators/: board_setup.py  kicad_pcb.py  netlist_gen.py  schematic_gen.py  sexpr_writer.py
pcb-autoplacer/src/pcb_autoplacer/parsers/: footprint.py  netlist.py  sexpr.py
pcb-autoplacer/src/pcb_autoplacer/placer/: constraints.py  engine.py
pcb-autoplacer/src/pcb_autoplacer/routing/: bridge.py  dsn_patcher.py  freerouting.py
pcb-autoplacer/tests/: test_cli.py  test_footprint_parser.py  test_netlist_parser.py  test_pcb_generator.py  test_sexpr_parser.py
pcb-autoplacer/tests/fixtures/: r0805.kicad_mod  simple.net  test-circuit.json
(+3756 files in other folders)
