[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcb-autoplacer"
version = "0.1.0"
description = "Automated PCB layout: schematic → placement → routing → Gerbers"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
pcb-autoplacer = "pcb_autoplacer.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
